welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: type Green
                 if(getCouleurSol():Green){
                                    ^SlugTracking:14: error: type green is not a member of object java.awt.Color
                 		if(getCouleurSol():Color.green){
                                                         ^SlugTracking:25: error: type green is not a member of object java.awt.Color
                 				if(getCouleurSol():Color.green){
                                                                         ^SlugTracking:25: error: type mismatch;
 found   : Unit
 required: Boolean
                 				if(getCouleurSol():Color.green){
                                                ^